fix: overflow after changes of bootstrap vars

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -1,4 +1,5 @@
 body {
+  overflow-x: hidden;
   padding-top: 230px;
   background-color: $color-black;
   font-family: 'Roboto', sans-serif;
